Tests/dsl/bad/parsing/UnitTestKO104_ClassWithoutTheRequiredInterface.php
<?php

// there is a php class here, but it misses the expected interface

class classWithoutTheRequiredInterface
{
}